--- a/test/ws.html
+++ b/test/ws.html
@@ -14,6 +14,7 @@
             console.log('connected to ws');
 
             socket.send('{"jsonrpc": "2.0", "method": "Test.Self", "params": [], "id": 1}');
+            socket.send('{"jsonrpc": "2.0", "method": "Test.Test", "params": [], "id": 2}');
         });
 
         socket.addEventListener('close', function (event) {
